@@ -1,6 +1,9 @@
+06-Jul-2015 Laurent Duflot
+	* makeDatasetList.py: list mc_channel_nb with no dataset found
+
 06-Jul-2015 Geraldine Conti
 	*add variables for photon isolation and quality
-	
+
 03-Jul-2015 Laurent Duflot
 	* add baseline mc15 xAOD sample lists
 	* makeDatasetList.py: add option --whichMC15 to automatically loop over the various
